# game

./: CMakeLists.txt  README.md
binary/: game_of_life
src/: bit_map.hh  game.cc  game.hh  game_board.cc  game_board.hh  main.cc  opt_game_board.cc
test/: test_bit_map.cc  test_game_board.cc  test_harness.hh
